--- a/index.html
+++ b/index.html
@@ -6,29 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
-    <link rel="stylesheet" href="css/icon-font.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <link rel="stylesheet" type="text/css" href="css/icon-font.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    
 
     <title>Natours</title>
 </head>
 
 <body>
     <header class="header">
-        <div class="logo-box">
-            <img class="logo" src="img/logo-white.png" alt="logo">
+        <div class="header__logo-box">
+            <img class="header__logo" src="img/logo-white.png" alt="logo">
         </div>
 
-        <div class="text-box">
+        <div class="header__text-box">
             <h1 class="heading-primary">
-                <span class="heading-primary-main">Outdoors</span>
-                <span class="heading-primary-sub">is where life happens</span>
+                <span class="heading-primary--main">Outdoors</span>
+                <span class="heading-primary--sub">is where life happens</span>
             </h1>
             <!-- HEADING h1 is IMPORTANT FOR GOOGLE or for nay other SEARCH ENGINES to figure out what our web page is about -->
-            <a class="btn btn-white btn-animated" href="#">Discover our tours</a>
+            <a class="btn btn--white btn--animated" href="#">Discover our tours</a>
         </div>
     </header>
+    
 
 </body>
 
