--- a/index.html
+++ b/index.html
@@ -58,13 +58,37 @@
             </div>
         </section>
 
-        <swction class="section-features">
+        <section class="section-features">
             
             <div class="row">
                 <div class="col-1-of-4">
                     <div class="feature-box"> <!-- ITIS A COMPONENT. The feature-box class is here cause not to affect the grid shape. THERFORE IS ANOTHER BOX INSIDE THE col-1-of-4 PURPOSE TO scale() the feature-box -->
                         <i class="feature-box__icon icon-basic-world"></i>
                         <h3 class="heading-tertiary">Explore the world</h3>
+                        <p class="feature-box__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore delectus ut, ab a eaque inventore unde. </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box"> <!-- ITIS A COMPONENT. The feature-box class is here cause not to affect the grid shape. THERFORE IS ANOTHER BOX INSIDE THE col-1-of-4 PURPOSE TO scale() the feature-box -->
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary">Meet nature</h3>
+                        <p class="feature-box__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore delectus ut, ab a eaque inventore unde. </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box"> <!-- ITIS A COMPONENT. The feature-box class is here cause not to affect the grid shape. THERFORE IS ANOTHER BOX INSIDE THE col-1-of-4 PURPOSE TO scale() the feature-box -->
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary">Find your way</h3>
+                        <p class="feature-box__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore delectus ut, ab a eaque inventore unde. </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box"> <!-- ITIS A COMPONENT. The feature-box class is here cause not to affect the grid shape. THERFORE IS ANOTHER BOX INSIDE THE col-1-of-4 PURPOSE TO scale() the feature-box -->
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary">Live healtier life</h3>
                         <p class="feature-box__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore delectus ut, ab a eaque inventore unde. </p>
                     </div>
                 </div>
