--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" type="text/css" href="css/icon-font.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
     <title>Natours</title>
@@ -94,6 +94,143 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-tours">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    Most polpular tours
+                </h2>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    <!-- CARD 1 =================================================  -->
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--1">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--1">The Sea Explorer</span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 day tour</li>
+                                    <li>Up to 30 people</li>
+                                    <li>2 tour guides</li>
+                                    <li>Sleep in cozy hotels</li>
+                                    <li>Difficulty: easy</li>
+                                </ul>
+                            </div>
+
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">£297</p>
+                                </div>
+                                <a class="btn btn--white" href="#">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- CARD 2 ======================================================  -->
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--2">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--2">The Forest Hiker</span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>7 day tours</li>
+                                    <li>Up to 40 people</li>
+                                    <li>6 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulty: medium</li>
+                                </ul>
+                            </div>
+
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">£497</p>
+                                </div>
+                                <a class="btn btn--white" href="#">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CARD 3 -------------------------------------------------->
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--3">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--3">The Snow Adventure</span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>5 day tour</li>
+                                    <li>Up to 15 people</li>
+                                    <li>3 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulty: hard</li>
+                                </ul>
+                            </div>
+
+                        </div>
+                        <div class="card__side card__side--back card__side--back-3">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">£897</p>
+                                </div>
+                                <a class="btn btn--white" href="#">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ====================== BUTTON GREEN ==============================================-->
+            <div class="u-center-text u-margin-top-big">
+                <a href="#" class="btn btn--green">Discover all tours</a>
+            </div>
+        </section>
+
+        <!-- ====================================================================  -->
+        <!-- =======================    STORIES    ================================-->
+
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img class="story__img" src="img/nat-8.jpg" alt="Person on the tour">
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, neque nesciunt excepturi ut natus voluptatem libero aliquam ex.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
     
 
