--- a/index.html
+++ b/index.html
@@ -211,6 +211,17 @@
         <!-- =======================    STORIES    ================================-->
 
         <section class="section-stories">
+            <!-- .bg-video  IS A COMPONENT-->
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay mutted loop>
+                    <!-- These sources make sure it works accross all the browsers -->
+                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/video.webm" type="video/webm">
+                    <!-- When the video is not working this text show up -->
+                    Your browser is not supported!
+                </video>
+            </div>
+
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     We make people genuinely happy
@@ -221,15 +232,75 @@
                 <div class="story">
                     <figure class="story__shape">
                         <img class="story__img" src="img/nat-8.jpg" alt="Person on the tour">
+                        <figcaption class="story__caption">Marry Smith</figcaption>
                     </figure>
                     <div class="story__text">
                         <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, neque nesciunt excepturi ut natus voluptatem libero aliquam ex.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, neque nesciunt excepturi ut natus voluptatem libero aliquam ex. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, neque nesciunt excepturi ut natus voluptatem libero aliquam ex. Illo, !!!MUST CONTAIN 43 WORDS WORDS WORDS!</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img class="story__img" src="img/nat-9.jpg" alt="Person on the tour">
+                        <figcaption class="story__caption">Jack Wilson</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">Wow my life is completely different</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, neque nesciunt excepturi ut natus voluptatem libero aliquam ex. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, neque nesciunt excepturi ut natus voluptatem libero aliquam ex. Illo, !!!MUST CONTAIN 43 WORDS WORDS WORDS!</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-big">
+                <a href="#" class="btn btn-text">Read all stories &rarr;</a>
+            </div>
+        </section>
+
+
+        <!--  =================== SECTION BOOK  =======================   -->
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                    START BOOKING NOW
+                                </h2>
+                            </div>
+                            <div class="form__group">
+                                <input id="name" type="text" class="form__input" placeholder="Full Name" required autocomplete="off">
+                                <label for="name" class="form__label">Full Name</label>
+                            </div>
+
+                            <div class="form__group">
+                                <input id="email" type="email" class="form__input" placeholder="Email Address" required autocomplete="off">
+                                <label for="email" class="form__label">Email Address</label>
+                            </div>
+
+                            <div class="form__group">
+                                <div class="form_radio-group">
+                                    <input id="small" type="radio" class="form__radio-input" name="size" autocomplete="off">
+                                    <label for="small" class="form__radio-label">
+                                        <span class="form__radio-button"></span>Small tour group
+                                    </label>
+                                </div>
+
+                                <div class="form__radio-group">
+                                    <input id="large" type="radio" class="form__radio-input" name="size" autocomplete="off">
+                                    <label for="large" class="form__radio-label">
+                                        <span class="form__radio-button"></span>Large tour group
+                                    </label>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
-
 
     </main>
     
